# Franci

./: AddEqual.cxx  AddInter.cxx  AddMult.cxx  AntiIdem.cxx  CMakeLists.txt  Class.cxx  Class.hxx  Clause2.cxx  Clause2.hxx  ClauseN.cxx  ClauseN.hxx  CmdShell.cxx  CmdShell.hxx  CodeStandards.bat  Combin1.cxx  Combin1.hxx  ConEqual.cxx  Destruct.cxx  Digraph.cxx  Digraph.hxx  Equal.cxx  Equal.hxx  EqualMult.cxx  Ext_Func.cxx  Ext_Func.hxx  FlatFile.cxx  FlatFile.hxx  GCF.cxx  GCF.hxx  Gentzen.cpp  GentzenW.cpp  Global.cxx  Global.hxx  GrepSystem.bat  HTMLtag.cpp  HTMLtag.hpp  Help.csv  InParse.cxx  InParse.hxx  InParse2.hxx  (+104 more)
NASM/: memmove.azm  memory2.azm  memset.azm  strcpy.azm  strlen.azm
Notes/: EBNF.txt  GUINotes.txt  KripkeFrames.html  ProtoDB.txt  RFC 2234 (rfc2234) - Augmented BNF for Syntax Specifications ABNF.htm  SimpleSentences.txt  Syllogistic.txt  UML.txt  VFTStructs.txt  shlex_cmd.txt  suo-kif.html
Zaimoni.STL/: AutoPtr.hpp  CMakeLists.txt  COW.hpp  Compiler.h  Logging.h  MetaRAM.hpp  MetaRAM2.hpp  NMake.inc  POD.hpp  POD_autoarray.hpp  POSIX.inc  algor.hpp  cache.hpp  custom_scoped_ptr.hpp  fstream  limits  lite_alg.hpp  observer.hpp  perl.hpp  polymorphic.hpp  simple_lock.hpp  stack.hpp  string.h  string2.h  z_memory.h
Zaimoni.STL/LexParse/: CMakeLists.txt  CSVTable.cpp  CSVTable.hpp  FormalWord.cpp  FormalWord.hpp  GNUmakefile  Kuroda.hpp  LexNode.cpp  LexNode.hpp  Parser.hpp  string_view.cpp  string_view.hpp
Zaimoni.STL/OS/: CMakeLists.txt  GNUmakefile  console.cpp  console.hpp  cstdio_console.cpp
Zaimoni.STL/OS/Win32/: CMakeLists.txt
Zaimoni.STL/Pure.C/: CMakeLists.txt  GNUmakefile  native.h  stdio_c.h
Zaimoni.STL/Pure.C/compile.test/: CMakeLists.txt
Zaimoni.STL/Pure.C/stdio.log/: CMakeLists.txt
Zaimoni.STL/bits/: algor.hpp  cstdio_autoptr.hpp  limits
Zaimoni.STL/boost/: functional.hpp
Zaimoni.STL/core.RAM/: CMakeLists.txt  memory.cpp
Zaimoni.STL/except/: syntax_error.hpp
Zaimoni.STL/metatype/: c_array.hpp
cfg/: core.yaml
docs/: Arithmetic.dot  FormalSystems.html  KripkeFrames.html  LogicFormalization.dot  NotationFormalizationPlatonism.dot  NotationFormalizationTegmark.dot  NotationFormalizationWittgenstein.dot  Numerals.dot  Reference_Logic.html  SetTheoryAxioms.dot  SubatomicPhysicsOfMath.html  SubatomicPhysicsOfMath_ArithmeticTables.html  SubatomicPhysicsOfMath_Cardinality.html  SubatomicPhysicsOfMath_Compass.html  SubatomicPhysicsOfMath_FormalLogicNotation.html  SubatomicPhysicsOfMath_FunctionsIntegers.html  SubatomicPhysicsOfMath_GeneralizedAssociativity.html  SubatomicPhysicsOfMath_IsMemberOf.html  SubatomicPhysicsOfMath_Logic.html  SubatomicPhysicsOfMath_NonclassicalWellOrderingOfN.html  SubatomicPhysicsOfMath_Numerals.html  SubatomicPhysicsOfMath_ProvabilityLogic.html  SubatomicPhysicsOfMath_QuestForEquality.html  SubatomicPhysicsOfMath_RereviewingLogic.html  index.md
tests/: IntegerEdged3Tetrahedron.htm  QualInv2Form.txt  QualInv2Form1.txt  QualInv2Form10.txt  QualInv2Form10Alt1.txt  QualInv2Form11.txt  QualInv2Form2.txt  QualInv2Form3.txt  QualInv2Form4.txt  QualInv2Form4Alt1.txt  QualInv2Form4Alt2.txt  QualInv2Form4Alt3.txt  QualInv2Form5.txt  QualInv2Form5Alt1.txt  QualInv2Form5Alt2.txt  QualInv2Form5Alt3.txt  QualInv2Form5Alt4.txt  QualInv2Form5Alt5.txt  QualInv2Form6.txt  QualInv2Form6Alt1.txt  QualInv2Form6Alt2.txt  QualInv2Form6Alt3.txt  QualInv2Form6Alt4.txt  QualInv2Form6Alt5.txt  QualInv2Form7.txt  QualInv2Form7Alt1.txt  QualInv2Form8.txt  QualInv2Form8Alt1.txt  QualInv2Form8Alt2.txt  QualInv2Form9.txt  QualInv2Form9Alt1.txt  QualInv2Form9Alt2.txt  QualInv2FormV2_1.txt  QualInv2FormV2_10.txt  QualInv2FormV2_11.txt  QualInv2FormV2_2.txt  QualInv2FormV2_3.txt  QualInv2FormV2_4.txt  QualInv2FormV2_5.txt  QualInv2FormV2_6.txt  (+7 more)
tools/: derived_from.gvpr
